--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "postinstall": "bower install && gulp build",
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "trash": "rm -rf public/files/*"
   },
   "repository": {
     "type": "git",
