--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.11.1",
     "lodash": "^4.17.2",
     "pmx": "^0.6.8",
+    "rimraf": "^2.6.2",
     "string-template": "^1.0.0",
     "website-scraper": "s0ph1e/node-website-scraper"
   },
