--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "postinstall": "bower install && gulp build",
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "trash": "rm -rf public/files/*"
+    "test": "rm -rf public/files/*"
   },
   "repository": {
     "type": "git",
